app/assets/stylesheets/components/_tags.scss
.title{
  margin-top: 20px;
  margin-bottom: 20px;
}

.wrapper-tags{
    form {
      -webkit-box-align: center;
      // display: flex;
      align-items: center;
      margin-top: 20px;
      margin-bottom: 20px;
    }
}

.form-index {
  display: flex;
  margin-bottom: 10px;
  width: 100%;
  .btn.btn-filter{
    width: 45%;
    padding-left: 0px;
  }
  .mapboxgl-ctrl-geocoder.mapboxgl-ctrl{
    max-width: unset;
  }
}

.filters {
  display: flex;
  flex-wrap: wrap;
  margin-bottom: 10px;
  justify-content: space-between;
  margin-right: 7px;
}

.tags-precision{
  padding-inline: 2px;
  font-size: 12px;
  label {
    width: 100%;
    cursor: pointer;
    text-align: center;
    border: 1px solid rgb(221, 221, 221);
    background-color: rgb(255, 255, 255);
    outline: none;
    margin: 0px;
    border-radius: 30px;
    color: rgb(34, 34, 34);
    font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
    position: relative;
    padding: 10px 16px;
    line-height: 16px;
    font-weight: normal;
    font-size: larger;
    margin-top: 10px;
  }
  label:hover {
    border: 1px solid #4A4A4A;
  }


  input {
    position: absolute;
    transform: scale(0);
  }
  input:checked + label {
    border: 1px solid #4A4A4A;
    background-color: #f7f4f0;
  }
}

